--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://malopez1578.github.io/meli-challenge/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MeLi Challenge</title>
-    <script type="module" crossorigin src="/assets/index.bb7006e4.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.757739d2.js">
-    <link rel="stylesheet" href="/assets/index.2cc21f2d.css">
+    <script type="module" crossorigin src="https://malopez1578.github.io/meli-challenge/assets/index.abe4aa55.js"></script>
+    <link rel="modulepreload" href="https://malopez1578.github.io/meli-challenge/assets/vendor.757739d2.js">
+    <link rel="stylesheet" href="https://malopez1578.github.io/meli-challenge/assets/index.2cc21f2d.css">
   </head>
   <body>
     <main class="o-main" id="root"></main>
