--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <base href="%PUBLIC_URL%/">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://malopez1578.github.io/meli-challenge/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MeLi Challenge</title>
-    <script type="module" crossorigin src="https://malopez1578.github.io/meli-challenge/assets/index.e8d21ca4.js"></script>
+    <script type="module" crossorigin src="https://malopez1578.github.io/meli-challenge/assets/index.ce68da1b.js"></script>
     <link rel="modulepreload" href="https://malopez1578.github.io/meli-challenge/assets/vendor.142e00de.js">
     <link rel="stylesheet" href="https://malopez1578.github.io/meli-challenge/assets/index.8c91e0b0.css">
   </head>
